# tunagui

./: .gitignore  LICENSE  README.md  tunagui.cabal
app/: Main.hs
src/: Tunagui.hs
src/General/: Initialize.hs
src/Tunagui/: Operation.hs  Widget.hs
src/Tunagui/General/: Base.hs  Data.hs  Event.hs  Initialize.hs  Layout.hs  Tunagui.hs  Types.hs
src/Tunagui/Internal/: Base.hs  Render.hs
src/Tunagui/Internal/Operation/: Draw.hs  Render.hs
src/Tunagui/Internal/Operation/Draw/: SDL.hs
src/Tunagui/Internal/Operation/Render/: SDL.hs
src/Tunagui/Internal/Render/: SDL.hs
src/Tunagui/Operation/: TWindow.hs  Window.hs
src/Tunagui/Primitive/: Button.hs
src/Tunagui/Widget/: Button.hs  Component.hs  Features.hs  Label.hs  Layout.hs  Part.hs
src/Tunagui/Widget/Component/: Color.hs  Conf.hs  Features.hs  Part.hs  Util.hs
src/Tunagui/Widget/Prim/: Button.hs  Label.hs
src/Tunagui/Widget/Prim/Component/: ClickableArea.hs
src/Tunagui/Widgets/: Features.hs  Layout.hs
src/Tunagui/Widgets/Prim/: Button.hs
src/Tunagui/Widgets/Prim/Component/: Clickable.hs  ClickableArea.hs
