name:                tunagui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/tunagui#README
license:             BSD3
license-file:        LICENSE
author:              Masato Kobayashi
maintainer:          masatokodo@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tunagui
                     , Tunagui.General.Data
                     , Tunagui.General.Initialize
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , text
                     , sdl2
                     , linear
  default-language:    Haskell2010

executable tunagui-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts
  build-depends:       base
                     , tunagui
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masatoko/tunagui
