name:                tunagui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/tunagui#README
license:             BSD3
license-file:        LICENSE
author:              Masato Kobayashi
maintainer:          masatokodo@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tunagui
                     , Tunagui.Operation
                     , Tunagui.Widget.Features
                     , Tunagui.Widget.Prim.Button
                     --
                     , Tunagui.General.Data
  other-modules:
                       Tunagui.General.Types
                     , Tunagui.General.Event
                     , Tunagui.General.Initialize
                    --  , Tunagui.Internal.Base
                     , Tunagui.Internal.Operation.Render
                     , Tunagui.Internal.Operation.Render.SDL
                     , Tunagui.Widget.Layout
                     , Tunagui.Widget.Component

  -- other-extensions:
  build-depends:       base
                     , mtl
                     , transformers
                     , text
                     , operational
                     , sodium
                     , sdl2 >= 2
                     , linear
  default-language:    Haskell2010

executable tunagui-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -Wall
  build-depends:       base
                     , tunagui
                     , mtl
                     , transformers
                     , sodium
                     , linear
                     , managed
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masatoko/tunagui
