name:                tunagui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/tunagui#README
license:             BSD3
license-file:        LICENSE
author:              Masato Kobayashi
maintainer:          masatokodo@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tunagui
                     , Tunagui.Operation
                     , Tunagui.Widget
                     , Tunagui.Widget.Button
                     , Tunagui.Widget.Label
  other-modules:
                       Tunagui.General.Data
                     , Tunagui.General.Types
                     , Tunagui.General.Base
                     , Tunagui.General.Event
                     , Tunagui.General.Initialize
                     , Tunagui.Internal.Render
                     , Tunagui.Internal.Render.SDL
                     , Tunagui.Operation.Window
                     , Tunagui.Widget.Component.Features
                     , Tunagui.Widget.Component.Part
                     , Tunagui.Widget.Component.Color
                     , Tunagui.Widget.Component.Conf
                     , Tunagui.Widget.Component.Util
                     , Tunagui.Widget.Prim.Button
                     , Tunagui.Widget.Prim.Label

                     -- git@github.com:sbidin/sdl2-ttf.git
                     , SDL.Font
                     , SDL.Raw.Font
                     , SDL.ExceptionHelper
                     , SDL.Raw.Helper

  -- other-extensions:
  pkgconfig-depends:   sdl2 >= 2.0.3
                     , SDL2_ttf >= 2.0.0

  c-sources:           cbits/helpers.c

  build-depends:       base
                     , mtl
                     , transformers
                     , stm
                     , text
                     , operational
                     , sodium
                     , sdl2 >= 2
                     , linear
                     , containers
                     , managed
                     -- For sdl2-ttf
                     , bytestring >= 0.10.4.0
                     , template-haskell
  default-language:    Haskell2010

executable tuna
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -Wall
  build-depends:       base
                     , tunagui
                     , mtl
                     , transformers
                     , text
                     , sodium
                     , linear
                     , managed
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masatoko/tunagui
